# htmdec_models

./: .gitignore  README.md  amdee_xrd.ipynb  birdshot_modeller.py  pyproject.toml  xrd_modeller.py
data/birdshot/gemd_folder/: (1 SR) 5-Indent Experiment_process_run.json  (1 SR) 5-Indent Experiment_process_spec.json  (1 SR) Area Measurement_measurement_run.json  (1 SR) Area Measurement_measurement_spec.json  (1 SR) Displacement Measurement_measurement_run.json  (1 SR) Displacement Measurement_measurement_spec.json  (1 SR) Hardness Measurement_measurement_run.json  (1 SR) Hardness Measurement_measurement_spec.json  (1 SR) Indented Sample_material_run.json  (1 SR) Indented Sample_material_spec.json  (1 SR) Load Measurement_measurement_run.json  (1 SR) Load Measurement_measurement_spec.json  (2 SR) 5-Indent Experiment_process_run.json  (2 SR) 5-Indent Experiment_process_spec.json  (2 SR) Area Measurement_measurement_run.json  (2 SR) Area Measurement_measurement_spec.json  (2 SR) Displacement Measurement_measurement_run.json  (2 SR) Displacement Measurement_measurement_spec.json  (2 SR) Hardness Measurement_measurement_run.json  (2 SR) Hardness Measurement_measurement_spec.json  (2 SR) Indented Sample_material_run.json  (2 SR) Indented Sample_material_spec.json  (2 SR) Load Measurement_measurement_run.json  (2 SR) Load Measurement_measurement_spec.json  2nd Phase EDS Measured Composition StdDev_measurement_run.json  (+101 more)
src/: birdshot_modeller.py  util.ipynb  xrd_modeller.py
src/htmdec_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+32 files in other folders)
